--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -17,7 +17,8 @@
   background-image: url("../img/sunrise.jpg");
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: auto;
+  padding: 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -55,4 +56,12 @@
   -webkit-text-fill-color: transparent;
 
   margin-bottom: 3%;
+}
+
+.box{
+  border-radius: 10px;
+  background-image: linear-gradient(to right, rgba(255, 0, 0, 0.4), rgba(255, 105, 91, 0.4) , rgba(255, 165, 0, 0.4));
+  height: auto;
+  width: 70vw;
+  padding: 1%;
 }
