--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #4d404a;
 }
 
 .App-logo {
@@ -17,7 +18,7 @@
   background-image: url("../img/sunrise.jpg");
   background-size: cover;
   background-position: center;
-  height: auto;
+  height: 100vh;
   padding: 2%;
   display: flex;
   flex-direction: column;
