--- a/src/styles/MenuBar.css
+++ b/src/styles/MenuBar.css
@@ -1,6 +1,11 @@
-div.sticky {
-    position: -webkit-sticky; /* Safari */
+div.fixed {
     position: fixed;
+    width: 100vw;
+    top: 0;
+    z-index: 99;
+  }
+  div.sticky {
+    position: sticky;
     top: 0;
     z-index: 99;
   }
