Change hrefs to Links

--- a/src/styles/Resources.css
+++ b/src/styles/Resources.css
@@ -15,7 +15,12 @@
     border-width: thin;
 }
 
-div.selection:hover {
+.selection {
+    text-decoration: none;
+    color: black;
+}
+
+.selection:hover {
     border: 1px solid #777;
   }
 
