Add background for profile section, experiement with resources bg

--- a/src/styles/Resources.css
+++ b/src/styles/Resources.css
@@ -1,6 +1,6 @@
 .resource-header{
     text-align: center;
-    background-image: url("../img/foggy.jpg");
+    background-image: url("../img/resource-bg.png");
     background-size: cover;
     background-position: center;
 }
