--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -11,3 +11,33 @@
     font-size: calc(10px + 2vmin);
     color: white;
   }
+
+  .Login-box{
+    border-radius: 10px;
+    background-image: linear-gradient(to right, rgba(0, 64, 255, 0.4), rgba(171, 247, 255, 0.4) , rgba(52, 144, 201, 0.4));
+    height: auto;
+    width: 70vw;
+    padding: 2%;
+  }
+
+  h1{
+    text-align: center;
+    color: rgb(2, 32, 127);
+  }
+  button.link {
+    background: none;
+    border: none;
+    padding: 0;
+    /*optional*/
+    font-family: arial, sans-serif;
+    /*input has OS specific font-family*/
+    color: #069;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
