--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -1,5 +1,5 @@
 .Profile-header {
-    background-image: url("../img/mountains.jpg");
+  background-image: url("../img/mountains.jpg");
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -12,6 +12,14 @@
     color: white;
   }
 
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
   .Login-header {
     background-image: url("../img/mountains.jpg");
     background-size: cover;
@@ -65,6 +73,16 @@
     text-align: center;
     color: rgb(77, 94, 111);
   }
+
+  h1.resumes{
+    text-align: center;
+    color: rgb(78, 2, 2);
+  }
+
+  p.resumes{
+    text-align: center;
+  }
+
   button.link {
     background: none;
     border: none;
@@ -76,20 +94,42 @@
     text-decoration: underline;
     cursor: pointer;
   }
+
   .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
   }
+
   .avatar{
     align-self: center;
     border-radius: 50%;
     height: 128px;
     width: 128px;
   }
+
   .spacing{
     margin:2%;
   }
-  
 
+  .uploadButton{
+    font-size: large;
+    width: fit-content;
+  }
+
+  div.resume-feature-container{
+    border-radius: 10px;
+    background-image: linear-gradient(to right, rgba(255, 0, 0, 0.4), rgba(255, 105, 91, 0.4) , rgba(255, 165, 0, 0.4));
+    display: flex;
+    flex-direction: column;
+    padding: 3%;
+    width: 80vw;
+  }
+div.upload-resume{
+  display: flex;
+  flex-direction: row;
+  height: auto;
+  align-items: flex-start;
+  justify-content: space-between;
+}
