--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -2,8 +2,8 @@
   background-image: url("../img/mountains.jpg");
     background-size: cover;
     background-position: center;
-    min-height: 100vh;
     padding-top: 3%;
+    min-height: 35vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,39 +36,20 @@
 
   .Login-box{
     border-radius: 10px;
-    background-image: linear-gradient(to right, rgba(0, 64, 255, 0.4), rgba(171, 247, 255, 0.4) , rgba(52, 144, 201, 0.4));
+    background-image: linear-gradient(to right, rgba(0, 64, 255, 0.2), rgba(171, 247, 255, 0.2) , rgba(52, 144, 201, 0.2));
     height: auto;
     width: 70vw;
     padding: 2%;
   }
 
-  .Top-profile-container{
-    border-radius: 10px;
-    background-image: linear-gradient(to right, rgba(70, 167, 252, 0.4), rgba(171, 247, 255, 0.4) , rgba(70, 167, 252, 0.4));
-    display: flex;
-    flex-direction: column;
-    margin: 2%;
-    padding-left: 3%;
-    padding-right: 3%;
-    padding-top: 1%;
-    padding-bottom: 1%;
-  }
-
-  .Top-profile-textCols{
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-  }
-
   .Top-profile-textRows{
     display: flex;
     flex-direction: row;
-    margin: 1%;
   }
 
   h1{
     text-align: center;
-    color: rgb(2, 32, 127);
+    color: rgb(46, 50, 63);
   }
 
   h2{
@@ -111,28 +92,20 @@
     width: 128px;
   }
 
-  .spacing{
-    margin:2%;
-  }
-
   .uploadButton{
     font-size: large;
     width: fit-content;
   }
 
-  div.resume-feature-container{
-    border-radius: 10px;
-    background-image: linear-gradient(to right, rgba(255, 0, 0, 0.4), rgba(255, 105, 91, 0.4) , rgba(255, 165, 0, 0.4));
-    display: flex;
-    flex-direction: column;
-    padding-left: 3%;
-    padding-right: 3%;
-    padding-top: 2%;
-    width: 80vw;
-  }
 div.upload-resume{
   display: flex;
   flex-direction: row;
   height: auto;
   align-items: flex-start;
+  margin-top: 1vh;
+}
+
+.resume-table{
+  padding-left: 1.5vw;
+  padding-right: 1.5vw
 }
