--- a/src/styles/Resources.css
+++ b/src/styles/Resources.css
@@ -45,4 +45,11 @@
     background-size: cover;
     min-height: 100vh;
     background-position: center;
+
+    max-height: calc(90vh - 89px);
+    overflow-y: auto;
+    background-color: rgb(255, 255, 255, 0.45);
+
+    /* min-width: 50vh; */
+    /* max-width: calc(160vh - 80px); */
 }
