--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
   background-color: #4d404a;
 }
@@ -72,4 +72,4 @@
   background-color: #4d404a;
   color: white;
   padding: 3%;
-}
+} */
